Fixed button visibility on header hover.

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,5 @@
 .buttonElement {
-  opacity: 0;
 }
 
 .buttonElement:hover {
-  opacity: 1;
 }
